<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hint_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/hint_warning"/>

    <EditText
        android:id="@+id/et_dummy_ip_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint_warning"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/dummy_ip"
        android:hint="@string/dummy_ip_setting"/>

    <Button
        android:id="@+id/btn_dummy_ip_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/et_dummy_ip_setting"
        android:layout_margin="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_dummy_ip_setting"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:elevation="0dp" />
</RelativeLayout>