<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/proposal_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/topbar_height"
            android:background="@drawable/background_title">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/contacts"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/btn_addressbook" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rl_center"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/complaint"
                    style="@style/segment_left"
                    android:text="@string/tabbar_item_txt_complaint" />

                <Button
                    android:id="@+id/proposal"
                    style="@style/segment_center"
                    android:text="@string/tabbar_item_txt_proposal" />

                <Button
                    android:id="@+id/bug"
                    style="@style/segment_right"
                    android:text="@string/tabbar_item_txt_bug" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="按房源"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/btn_arrow_down" />

            </LinearLayout>
        </RelativeLayout>

        <!--<android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_widget"
            android:layout_width="match_parent"
            android:layout_height="135dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/history_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </android.support.v4.widget.SwipeRefreshLayout>
-->
        <com.avoscloud.leanchatlib.view.xlist.XListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="135dp"
            android:background="#ebebeb"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:dividerHeight="5dp"
            android:listSelector="@android:color/transparent"
            android:scrollbarStyle="outsideOverlay"
            android:stackFromBottom="true" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#BABABA" />

        <com.yuan.house.ui.view.InputBottomBar
            android:id="@+id/chat_inputbottombar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#BABABA" />

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/topbar" />

    </LinearLayout>

</ScrollView>